[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/multi_box_test.gd" type="Script" id=1]
[ext_resource path="res://scenes/inventory.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="inventory" parent="." instance=ExtResource( 2 )]
margin_top = 1.0
margin_bottom = 1.0
mouse_filter = 1

[node name="Button" type="Button" parent="."]
margin_left = 873.0
margin_top = 46.0
margin_right = 956.0
margin_bottom = 66.0
text = "open box 1"

[node name="Button2" type="Button" parent="."]
margin_left = 878.0
margin_top = 136.0
margin_right = 961.0
margin_bottom = 156.0
text = "open box 2"

[node name="Button3" type="Button" parent="."]
margin_left = 910.0
margin_top = 543.0
margin_right = 985.0
margin_bottom = 563.0
text = "Close Box"

[connection signal="pressed" from="Button" to="." method="_on_Button_box1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
